# mono_lidar_depth

./: README.md  install_dependencies.sh
feature_tracking_core/: CMakeLists.txt  package.xml
feature_tracking_core/src/: stereo_tracker.cpp  stereo_tracker_libviso.cpp  tracker_libviso.cpp  tracklet.cpp  utilities.cpp  visualization.cpp
matches_conversion_ros_tool/: CMakeLists.txt  package.xml
matches_msg_conversions_ros/: CMakeLists.txt  package.xml
matches_msg_conversions_ros/include/matches_msg_conversions_ros/: convert.hpp
matches_msg_conversions_ros/src/: convert.cpp  convert_opencv3.cpp
matches_msg_conversions_ros/test/: test_matches_msg_conversions_ros.cpp
matches_msg_depth_ros/: CMakeLists.txt  package.xml
matches_msg_ros/: CMakeLists.txt  package.xml
matches_msg_types/: CMakeLists.txt  package.xml
mono_lidar_depth/: package.xml
monolidar_fusion/: CMakeLists.txt  dataset.launch  package.xml  parameters.yaml  rovio.yaml
monolidar_fusion/include/monolidar_fusion/: DepthEstimationWrapper.h  DepthEstimator.h  DepthEstimatorParameters.h  HistogramPointDepth.h  Logger.h  NeighborFinderBase.h  NeighborFinderPixel.h  PlaneEstimationCalcMaxSpanningTriangle.h  PointcloudData.h  RoadDepthEstimatorBase.h  TresholdDepthLocal.h  camera_pinhole.h  common.h  eDepthResultType.h
monolidar_fusion/src/: DepthEstimator.cpp  DepthEstimatorParameters.cpp  HelperLidarRowSegmentation.cpp  Histogram.cpp  HistogramPointDepth.cpp  LinePlaneIntersectionBase.cpp  LinePlaneIntersectionNormal.cpp  LinePlaneIntersectionOrthogonalTreshold.cpp  NeighborFinderBase.cpp  NeighborFinderKdd.cpp.unused  NeighborFinderPixel.cpp  PlaneEstimationCalcMaxSpanningTriangle.cpp  RansacPlane.cpp  RoadDepthEstimatorLeastSquares.cpp  RoadDepthEstimatorMEstimator.cpp  RoadDepthEstimatorMaxSpanningTriangle.cpp  TresholdDepthGlobal.cpp  TresholdDepthLocal.cpp  fusion_node.cc
monolidar_fusion/test/: test_monolidar_fusion.cpp
tracklets_depth_ros_tool/: CMakeLists.txt  package.xml
tracklets_depth_ros_tool/src/tracklet_depth_node/: tracklet_depth.h
