<?xml version="1.0"?>
<package format="2">
  <name>monolidar_fusion</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>GPLv3</license>
  <maintainer email="upcrj@student.kit.edu">Alexander Wilczynski</maintainer>
  <author email="upcrj@student.kit.edu">Alexander Wilczynski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <test_depend>gtest</test_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>ceres_catkin</depend>
  <depend>rosbag</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
